--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <title>test</title>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
   </head>
   <body>
     hello
