Part1 add game.js and canvas

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
     <script src="//cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
   </head>
   <body>
-    hello
+    <script src="/game.js"></script>
   </body>
 </html>
